# doser_bot_package

./: README.md
src/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/cfg/: Interface.cfg
src/doser_bot_arduino/: definitions.h  doser_bot_arduino.ino  load_cell.ino  misc_functions.ino  motors.ino  serial_interface.ino
src/doser_bot_arduino/libraries/MotorInterface/: MotorInterface.cpp  MotorInterface.h
src/doser_bot_arduino/libraries/hx711/: HX711.cpp
src/include/: dynamic.hpp  parameter_lookup.hpp
src/launch/: testing.launch
src/msg/: DoserBotAcknowledge.msg  DoserBotJobCancelled.msg  LoadCellStatus.msg  MessageProgression.msg  MotorStatus.msg  MultiMotorPulsesAtRpmJob.msg  MultiMotorPulsesJob.msg  MultiMotorRotationsAtRpmJob.msg  Pulses.msg  PulsesAtRpm.msg  Rotations.msg  RotationsAtRpm.msg  SequentialMultiMotorRotationsJob.msg
src/scripts/: doser_bot_motor_controller.py  doser_bot_node.py  doser_bot_ros.py  doser_bot_tests.py
src/src/: __init__.py  definition_file_parser.py  doser_bot_class.py  doser_bot_motor_class.py  dynamic_node.cpp  selections_node.cpp  track_dynamic_parameter_changes.cpp
src/src/global_functions/: __init__.py  load_cell.py  motor.py
src/srv/: MotorPulsesService.srv  MotorPulsesSpecificRpmService.srv  MotorRotationsService.srv  MotorRotationsSpecificRpmService.srv  WakeMotorService.srv
